# end2end_monitoring_dashboard

./: .gitignore  MAAS_CDS_CIDL_Configuration_Item_Data_List-2.5.0.docx  MAAS_CDS_MI_0012-2.5.0.docx  MAAS_CDS_MU_0013-2.5.0.docx  OMCS_Collector_Interface_Documentation-2.5.0.xlsx  OMCS_Technical_Dashboard_Description_For_Operation-2.5.0.xlsx  README.md  build_modules.sh  docker-compose.yaml  docker_build.sh  env.sh  functions.sh  local_install.sh
maas-cds-2.0.3/: .coveragerc  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  PKG-INFO  README.md  setup.cfg  sonar-project.properties  tox.ini
maas-cds-2.0.3/conf/: cds-engine-conf.json
maas-cds-2.0.3/docs/: conf.py  index.md
maas-cds-2.0.3/resources/templates/: cds-cadip-acquisition-pass-status_template.json  cds-cams-tickets_template.json  cds-datatake_template.json  cds-downlink-datatake_template.json  cds-hktm-acquisition-completeness_template.json  cds-interface-status_template.json  cds-product_template.json  cds-publication_template.json  cds-s2-tilpar_template.json  cds-s3-completeness_template.json  raw-data-app-product_template.json  raw-data-aps-file_template.json  raw-data-auxip-product_template.json  raw-data-creodias-product_template.json  raw-data-ddp-data-available_template.json  raw-data-deletion-issue_template.json  raw-data-download-volume-count_template.json  raw-data-mp-all-product_template.json  raw-data-mp-hktm-acquisition-product_template.json  raw-data-mp-product_template.json  raw-data-mpcip-product_template.json  raw-data-prip-product_template.json  raw-data-sat-unavailability-product_template.json
maas-cds-2.0.3/scripts/: check_intersection.py  compute_id.py  gen_payload_id.py  generate-collector-model-conf.sh  init-database.sh  parse_file_and_get_id.py  run-cds-engine.sh
maas-cds-2.0.3/scripts/lib/: es_wrapper.sh  functions.sh
maas-cds-2.0.3/src/maas_cds/cli/: el_grando_satruman.py
maas-cds-2.0.3/src/maas_cds/lib/: __init__.py  geo_mask_utils.py  periodutils.py  tolerance.py
maas-cds-2.0.3/src/maas_cds/model/: __init__.py  acquisition_pass_status.py  cds_s3_completeness.py  cds_s5_completeness.py  das_product.py  dataflow.py  datatake.py  datatake_s1.py  datatake_s2.py  dd_product.py  dissemination_mixin.py  dynamic_partition_mixin.py  generated.py  product.py  product_datatake_mixin.py  product_s1.py  product_s2.py  product_s3.py  product_s5.py  s2_tilpar_tiles.py  timeliness_mixin.py
maas-cds-2.0.3/src/maas_cds/update/: patch_1_10_0.py  patch_1_11_0.py  patch_1_12_0.py  patch_1_14_0.py  patch_1_1_0.py  patch_1_8_0.py  task_monitoring.py
maas-cds-2.0.3/tests/: conftest.py  test_geo_mask_utils.py  test_mission_mixin.py  test_tolerance.py
maas-cds-2.0.3/tests/data/: dd_attrs.py  s1_data_test.py  s2_data_test.py
maas-cds-2.0.3/tests/test_compute/: test_completeness_status.py  test_interface_status.py  test_message_emitter.py
maas-cds-2.0.3/tests/test_dynamic_partition_key/: test_dynamic_partition_key_regex.py  test_dynamic_partition_key_s2.py
maas-cds-2.0.3/tests/test_parsing_name/: test_factory.py  test_normalize_name.py  test_parsing_name_s1.py  test_parsing_name_s2.py  test_parsing_name_s5.py  test_remove_extension.py
maas-collector-3.0.0/: .coveragerc  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  PKG-INFO  docker-compose.yml  ingestion.pptx  setup.cfg  setup.py  tox.ini
maas-collector-3.0.0/charts/collector/: Chart.yaml  values.yaml
maas-collector-3.0.0/docs/: csvextractor.md  logextractor.md  readme.md  requirements.txt  updatejournal.md
maas-collector-3.0.0/src/maas_collector/: maas_consumer_mixin.py
maas-collector-3.0.0/tests/: test_extractor_eisp.py  test_extractor_satu.py  test_extractors.py  test_meta_conf.py  test_model.py  test_xlsx_column_extractor.py  test_xlsx_multi_sheet.py
maas-collector-3.0.0/tests/conf/: maas-collector-conf-template.json  maas-collector-interface-monitoring.json  test-maas-collector-odata-bad-auth.json  test-maas-collector-odata-basic.json  test-maas-collector-odata-no-auth.json  test-maas-collector-odata-oauth-pagination.json  test-maas-collector-odata-oauth.json  test-maas-collector-odata-wrong-interface.json
maas-collector-3.0.0/tests/data/: Bank_Holidays_2023_per_country.xlsx  DCS_02_L20191003131732787001008_PRODUCTS.xml  OMCS-1234_LTA_S2B_DelList_20220830_V20220830_20220830.csv  OMCS-4321_LTA_S1A__DelList_20220823_V20220818_20220818.xlsx  S2A_OPER_MTD_L0U_DS_SGS__20201201T141044_S20191208T030316.xml  S2A_OPER_PRD_L0__DS_SGS__20200420T205828_S20200322T173347_SIZE.xml  S2B_OPER_GIP_PROBAS_MPC__20210706T000301_V20210708T060000_21000101T000000_B00.DBL  S2_COP_REP_PERF_CGS-INS__20220522T122038_V20220521T120000_20220522T115959.xlsx  S5P_OPER_REP__SUP___20221007T012935_20221007T035455_0001.EOF.xml  jira_like_json_iterate_test.json  xlsx_multi_sheet.xlsx
maas-engine-2.0.2/: .coveragerc  .gitlab-ci.yml  AUTHORS.md  CONTRIBUTING.md  PKG-INFO  setup.cfg  setup.py
maas-engine-2.0.2/charts/maas-engine/: Chart.yaml  values.yaml
maas-engine-2.0.2/docs/: index.md  maas_engine_cli.md  maas_migrate.md  performance_guide.md  python311_migration.md  queue_utils.md  requirements.txt  tutorial.md
maas-engine-2.0.2/tests/: conftest.py  test_amqp_settings.py  test_engine.py
maas-model-2.0.1/: .coveragerc  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  PKG-INFO  README.md  setup.cfg
maas-model-2.0.1/docs/: authors.md  conf.py  index.md  single_index.md
maas-model-2.0.1/src/maas_model/: document.py
maas-model-2.0.1/tests/: test_pygen.py  test_zuludate.py
maas-model-2.0.1/tests/data/: object-list_template.json  raw-data-sample3_template.json  sample1-simple_template.json
modules/maas-cds/: .dockerignore  LICENSE.txt  MANIFEST.in  pyproject.toml  setup.cfg  setup.py
modules/maas-cds/docs/: performance_maas-cds.md  requirements.txt
modules/maas-cds/tests/: test_anomaly_mixin.py  test_geo_mask_utils.py  test_periodutils.py
modules/maas-engine/: AUTHORS.md  LICENSE.txt  README.md  setup.cfg  setup.py
modules/maas-engine/docs/: conf.py
modules/maas-engine/tests/: test_amqp_settings.py  test_replicator_engine.py
(+954 files in other folders)
