[metadata]
name = maas-cds
description = OMCS Micro Services
author = Telespazio
author_email = maas@telespazio.com
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://gitlab.telespazio.fr/Maas/maas-cds
project_urls = 
	Documentation = https://gitlab2.telespazio.fr/maas/core/documentation
	Source = https://gitlab.telespazio.fr/Maas/maas-cds
	Tracker = https://jira.ssl.telespazio.com/projects/MAAS_CDS/summary
platforms = any
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python
	Programming Language :: Python :: 3.11
	Topic :: Database

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir = 
	=src
python_requires = >=3.11
install_requires = 
	importlib-metadata; python_version<"3.8"
	maas-engine>=2,<3
	python-datemath==1.5.5
	geomet>=1.0.0,<2
	shapely>=2.0.1,<3

[options.packages.find]
where = src
exclude = 
	tests

[options.extras_require]
testing = 
	setuptools
	pytest
	pytest-cov

[options.entry_points]
console_scripts = 
	patch_1_1_0 = maas_cds.update.patch_1_1_0:run
	patch_1_8_0 = maas_cds.update.patch_1_8_0:run
	patch_1_9_0 = maas_cds.update.patch_1_9_0:run
	patch_1_10_0 = maas_cds.update.patch_1_10_0:run
	patch_1_11_0 = maas_cds.update.patch_1_11_0:run
	patch_1_12_0 = maas_cds.update.patch_1_12_0:run
	patch_1_14_0 = maas_cds.update.patch_1_14_0:run
	patch_1_17_0 = maas_cds.update.patch_1_17_0:run
	patch_2_0_0 = maas_cds.update.patch_2_0_0:run
	maas_update_public_site = maas_cds.cli.maas_update_public_site:run
	el_grando_satruman = maas_cds.cli.el_grando_satruman:run

[tool:pytest]
addopts = 
	--cov maas_cds --cov-report term-missing --cov-report xml --junitxml junit.xml
	--verbose
norecursedirs = 
	dist
	build
	.tox
testpaths = tests

[bdist_wheel]
universal = 1

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

[pyscaffold]
version = 4.4
package = maas_cds
extensions = 
	gitlab
	markdown

[egg_info]
tag_build = 
tag_date = 0

