[metadata]
name = maas-collector
description = MAAS data collect service
author = Telespazio France
author_email = maas@telespazio.com
license = Apache-2.0
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://gitlab2.telespazio.fr/maas/maas-collector
project_urls = 
	Documentation = https://pyscaffold.org/
platforms = any
classifiers = 
	Development Status :: 5 - Production/Stable
	Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir = 
	=src
python_requires = >=3.11
install_requires = 
	importlib-metadata; python_version<"3.8"
	maas-model>=2,<3
	kombu>=5.3.1,<6.0
	jsonpath_ng>=1.5.3,<2.0
	pysftp>=0.2.9
	flask>=3,<4
	py-healthcheck>=1.10.1,<2.0
	requests>=2.31.0,<3.0
	xlrd3>=1.1.0,<2.0
	jira>=3.5.2,<4.0
	paramiko==2.8.0

[options.packages.find]
where = src
exclude = 
	tests

[options.extras_require]
testing = 
	setuptools
	pytest
	pytest-cov

[options.entry_points]

[tool:pytest]
addopts = 
	--cov maas_collector --cov-report term-missing
	--verbose
norecursedirs = 
	dist
	build
	.tox
testpaths = tests

[bdist_wheel]
universal = 1

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

[pyscaffold]
version = 4.4
package = maas_collector
extensions = 
	gitlab
	markdown

[egg_info]
tag_build = 
tag_date = 0

