[metadata]
name = maas-engine
description = Calculation Service for MAAS
author = Telespazio
author_email = 
license = Apache-2.0
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://gitlab.telespazio.fr/Maas/maas-engine
project_urls = 
	Documentation = https://pyscaffold.org/
platforms = Linux
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python
	Programming Language :: Python :: 3.11
	Topic :: Database
	Topic :: Software Development :: Libraries :: Application Frameworks
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir = 
	=src
python_requires = >=3.11
install_requires = 
	importlib-metadata; python_version<"3.8"
	maas-model>=2,<3
	kombu>=5.3.1,<6.0
	flask>=3,<4
	py-healthcheck>=1.10.1,<2.0
	pyrabbit>=1.1.0,<2.0
	numpy>=1.24.1,<2.0
	prettytable>=3.7.0,<4.0

[options.packages.find]
where = src
exclude = 
	tests

[options.extras_require]
testing = 
	setuptools
	pytest
	pytest-cov
	pytest_rabbitmq
	mock

[options.entry_points]
console_scripts = 
	maas_migrate = maas_engine.update.migration:run
	maas_engine_cli = maas_engine.cli.run:run
	maas_delete_all_queues = maas_engine.cli.delete_all_queues:run
	maas_backup_queue = maas_engine.cli.backup_queue:run
	maas_aggregate_payloads = maas_engine.cli.aggregate_payloads:run
	maas_publish_message = maas_engine.cli.publish_message_folder:run
	maas_engine_stats = maas_engine.cli.eng_stat:run

[tool:pytest]
addopts = 
	--cov maas_engine --cov-report term-missing
	--verbose
norecursedirs = 
	dist
	build
	.tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

[pyscaffold]
version = 4.4
package = maas_engine
extensions = 
	gitlab
	no_skeleton

[egg_info]
tag_build = 
tag_date = 0

