[metadata]
name = maas-model
description = model base classes and functions for MAAS
author = telespazio
author_email = maas@telespazio.com
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://gitlab.telespazio.fr/Maas/maas-model
project_urls = 
	Documentation = https://pyscaffold.org/
platforms = any
classifiers = 
	Development Status :: 5 - Production/Stable
	Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir = 
	=src
python_requires = >=3.11
install_requires = 
	importlib-metadata; python_version<"3.8"
	opensearch-py<2.4
	python-dateutil>=2.8,<3.0
	black # no version specification as it's a third party tool for DAO generation

[options.packages.find]
where = src
exclude = 
	tests

[options.extras_require]
testing = 
	setuptools
	pytest
	pytest-cov

[options.entry_points]

[tool:pytest]
addopts = 
	--cov maas_model --cov-report term-missing
	--verbose
norecursedirs = 
	dist
	build
	.tox
testpaths = tests

[bdist_wheel]
universal = 1

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

[pyscaffold]
version = 4.4
package = maas_model
extensions = 
	gitlab
	markdown

[egg_info]
tag_build = 
tag_date = 0

