# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = maas-cds
description = OMCS Micro Services
author = Telespazio
author_email = maas@telespazio.com
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/coordinationdesk/end2end_monitoring_dashboard/tree/master/modules/maas-cds/Maas/maas-cds
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/coordinationdesk/end2end_monitoring_dashboard/tree/master/modules/maas-cds/maas/core/documentation
    Source = https://github.com/coordinationdesk/end2end_monitoring_dashboard/tree/master/modules/maas-cds/Maas/maas-cds
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
    Tracker = https://jira.ssl.telespazio.com/projects/MAAS_CDS/summary
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Topic :: Database

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.11

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    maas-engine>=2,<3
    python-datemath==1.5.5
    geomet>=1.0.0,<2
    shapely>=2.0.1,<3

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install maas-cds[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    patch_1_1_0 = maas_cds.update.patch_1_1_0:run
    patch_1_8_0 = maas_cds.update.patch_1_8_0:run
    patch_1_9_0 = maas_cds.update.patch_1_9_0:run
    patch_1_10_0 = maas_cds.update.patch_1_10_0:run
    patch_1_11_0 = maas_cds.update.patch_1_11_0:run
    patch_1_12_0 = maas_cds.update.patch_1_12_0:run
    patch_1_14_0 = maas_cds.update.patch_1_14_0:run
    patch_1_17_0 = maas_cds.update.patch_1_17_0:run
    patch_2_0_0 = maas_cds.update.patch_2_0_0:run
    patch_2_2_2 = maas_cds.update.patch_2_2_2:run
    maas_update_public_site = maas_cds.cli.maas_update_public_site:run
    el_grando_satruman = maas_cds.cli.el_grando_satruman:run

# Add here console scripts like:
# console_scripts =
#     script_name = maas_cds.module:function
# For example:
# console_scripts =
#     fibonacci = maas_cds.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this py.test issue.
addopts =
    --cov maas_cds --cov-report term-missing --cov-report xml --junitxml junit.xml
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.4
package = maas_cds
extensions =
    gitlab
    markdown
